--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js"
+    "start":"node src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,6 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "mongoose": "^5.12.2",
-    "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
   }
 }
