--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "googleapis": "^159.0.0",
     "mongoose": "^5.12.2",
+    "node-schedule": "^2.1.1",
     "socket.io": "^4.8.1"
   }
 }
